--- a/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
+++ b/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
@@ -1,31 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.esupportail</groupId>
+		<artifactId>esup-commons2-jsf-parent</artifactId>
+		<version>0.2.3-SNAPSHOT</version>
+	</parent>
 	<groupId>org.esupportail</groupId>
-	<artifactId>esup-commons2-jsf-trinidad
-	</artifactId>
+	<artifactId>esup-commons2-jsf-trinidad</artifactId>
 	<packaging>pom</packaging>
 	<version>0.3.0-SNAPSHOT</version>
 	<name>esup-commons2-jsf-trinidad</name>
 	<description>Artifact pour esup-commons-jsf-trinidad
 	</description>
-    <distributionManagement>
-        <repository>
-            <id>mvn.esup-portail.org</id>
-            <name>esup-portail</name>
-            <url>https://mvn.esup-portail.org/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>mvn.esup-portail.org</id>
-            <name>esup-portail</name>
-            <url>https://mvn.esup-portail.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-	<parent>
-		<groupId>org.esupportail</groupId>
-		<artifactId>esup-commons2-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
-	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.myfaces.trinidad
