--- a/esup-commons-jsf-parent/pom.xml
+++ b/esup-commons-jsf-parent/pom.xml
@@ -14,9 +14,12 @@
 	<modules>
 		<module>esup-commons-jsf</module>
 		<module>esup-commons-jsf-primeFaces</module>
+		<module>esup-commons-jsf-trinidad</module>
 		<module>esup-commons-jsf-richFaces</module>
 		<module>esup-commons-jsf-exception</module>
 		<module>esup-commons-jsf-portlet</module>
+		<module>esup-commons-jsf2</module>
+		<module>esup-commons-jsf2-exception</module>
 	</modules>
 	<dependencies>
 		<dependency>
