--- a/example-web-jsf-mobile/pom.xml
+++ b/example-web-jsf-mobile/pom.xml
@@ -35,7 +35,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.esupportail</groupId>
-			<artifactId>example-web-api</artifactId>
+			<artifactId>example-web-jsf-shared</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
