--- a/example-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -8,11 +8,11 @@
 # Database
 #
 
-hibernate.connection.jdbc.url=jdbc:mysql://localhost/example
-hibernate.connection.jdbc.username=root
-hibernate.connection.jdbc.password=root
+hibernate.connection.driver_class=org.hsqldb.jdbcDriver
+hibernate.connection.jdbc.url=jdbc:hsqldb:file:exampleData
+hibernate.connection.jdbc.username=sa
+hibernate.connection.jdbc.password=
 
-hibernate.useJndi=false
 hibernate.connection.jndi.datasource=jdbc/esup-example
 
 ########################################################################
@@ -53,32 +53,16 @@ smtp.interceptAll=true
 smtp.interceptEmail=raymond.bourges@univ-rennes1.fr
 smtp.interceptName=ESUP-Portail Example
 
-########################################################################
-# Upload
-#
-
-uploadedFiles.path=c:/example/files
 
 ########################################################################
 # URL generation
 #
 
-urlGeneration.bean=servletUrlGenerator
-#urlGeneration.bean=uportalUrlGenerator
-
 urlGeneration.casLoginUrl=https://sso-cas.unniv-rennes1.fr/login?service=%s
 
-urlGeneration.servletLoginUrl=http://localhost:8080/esup-example/stylesheets/cas.faces
-urlGeneration.servletGuestUrl=http://localhost:8080/esup-example/stylesheets/welcome.faces
+urlGeneration.servletLoginUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/cas.faces
+urlGeneration.servletGuestUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/welcome.faces
 
-urlGeneration.uportalFunctionnalName=esup-example
-urlGeneration.uportalLoginUrl=http://portal.domain.edu/Login
-urlGeneration.uportalGuestUrl=http://portal.domain.edu/Guest
-
-########################################################################
-# WEB SERVICES (server part)
-
-webService.authorizedClientNames=host1.domain.edu,host2.domain.edu
 
 ########################################################################
 # WEB SERVICES (client part)
@@ -89,17 +73,4 @@ remote.url=http://localhost:8080/esup-example/xfire/Information
 # TIMEZONE
 
 timezone=Europe/Paris
-
-########################################################################
-# LOGGING
-
-log.level=WARN
-log.output=stdout
-log.pattern=%d %p [%c] - %m%n
-log.file=esup-example.log
-
-########################################################################
-# CACHE
-
-cache.path=/tmp/example/cache
 
