--- a/example-web-jsf-servlet/src/main/resources/properties/defaults.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/defaults.properties
@@ -2,29 +2,19 @@ titleI18nKey=WINDOW.TITLE
 title=
 
 mediaPath.portlet=/esup-blank/media
-mediaPath.servlet=../media
+mediaPath.servlet=/media
 
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
+hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-hibernate.connection.jdbc.url=jdbc:mysql://localhost/blank
+hibernate.connection.jdbc.url=jdbc:hsqldb:file:exampleData
 hibernate.connection.jdbc.username=admin
 hibernate.connection.jdbc.password=secret
-hibernate.jdbcTemplateBeanName=jdbcHibernateTemplate
-hibernate.jdbcSessionFactoryBeanName=jdbcSessionFactory
-hibernate.jdbcUpgradeSessionFactoryBeanName=jdbcUpgradeSessionFactory
-hibernate.useJndi=true
 hibernate.connection.jndi.datasource=jdbc/esup-blank
-hibernate.jndiTemplateBeanName=jndiHibernateTemplate
-hibernate.jndiSessionFactoryBeanName=jndiSessionFactory
-hibernate.jndiUpgradeSessionFactoryBeanName=jndiUpgradeSessionFactory
 
-auth.portal.uidAttribute=uid
 cas.url=https://cas.domain.edu
 
 exceptionHandling.logLevel=INFO
 exceptionHandling.email=bugs@domain.edu
-
-init.firstAdministratorId=
 
 ldap.url=ldap://ldap.domain.edu:389
 ldap.userName=
@@ -39,11 +29,6 @@ ldap.testFilter=cn=*smith*
 ldap.connectTimeout=5000
 ldap.attributes=cn,displayName,employeeType,department,homeDirectory
 ldap.searchDisplayedAttributes=cn,displayName,employeeType,department
-
-portal.webServiceUrl=http://portal.domain.edu/services/UportalService
-portal.testUser=smith
-portal.testGroupId=local.0
-portal.testGroupName=Everyone
 
 smtp.host=smtp.domain.edu
 smtp.port=25
@@ -60,13 +45,4 @@ smtp.testEmail=maintainer@domain.edu
 smtp.testName=Maintainer
 
 timezone=Europe/Paris
-
-log.level=WARN
-log.output=stdout
-log.pattern=%d %p [%c] - %m%n
-log.file=esup-blank.log
-log.maxFileSize=5MB
-log.maxBackupIndex=3
-
-cache.path=/tmp/blank/cache
 
