--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,83 @@
 			</releases>
 		</repository>
 	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>esup</id>
+			<name>esup-portail</name>
+			<url>https://mvn.esup-portail.org/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>esup</id>
+			<name>esup-portail</name>
+			<url>https://mvn.esup-portail.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<modules>
 		<module>blank-dao</module>
 		<module>blank-utils</module>
-		<module>blank-web-jsf-mixed</module>
 		<module>blank-domain-beans</module>
 		<module>blank-domain-services</module>
+		<module>blank-web-jsf-mixed</module>
+		<module>blank-web-jsf-servlet</module>
 	</modules>
+	<build>
+		<defaultGoal>javadoc:javadoc</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<minmemory>128m</minmemory>
+					<maxmemory>512m</maxmemory>
+					<goal>javadoc:javadoc</goal>
+					<reportOutputDirectory>docs/javadoc</reportOutputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<useProjectReferences>true</useProjectReferences>
+					<additionalConfig>
+						<file>
+							<name>.checkstyle</name>
+							<url>http://subversion.cru.fr/esup-commons/utils/checkstyle/checkstyle.xml</url>
+						</file>
+					</additionalConfig>
+					<additionalProjectFacets>
+						<jst.jsf>1.2</jst.jsf>
+					</additionalProjectFacets>
+					<additionalProjectnatures>
+						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+					</additionalProjectnatures>
+					<additionalBuildcommands>
+						<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+					</additionalBuildcommands>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+					<wtpversion>2.0</wtpversion>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.26</version>
+				<configuration>
+					<contextPath>/</contextPath>
+					<!-- <scanIntervalSeconds>3</scanIntervalSeconds> <scanTargetPatterns> 
+						<scanTargetPattern> <directory>src/main/webapp/WEB-INF</directory> <excludes> 
+						<exclude>**/*.jsp</exclude> <exclude>**/*.xhtml</exclude> </excludes> <includes> 
+						<include>**/*.properties</include> <include>**/*.xml</include> </includes> 
+						</scanTargetPattern> </scanTargetPatterns> -->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<esupcommons.version>0.2.3-SNAPSHOT</esupcommons.version>
+	</properties>
 </project>
