--- a/example-web-jsf-mobile/src/main/resources/properties/config.properties
+++ b/example-web-jsf-mobile/src/main/resources/properties/config.properties
@@ -3,82 +3,26 @@
 #
 # see /properties/config-example.properties for more information.
 #
-
-########################################################################
-# Database
-#
-
-hibernate.connection.jdbc.url=jdbc:mysql://localhost/example
-hibernate.connection.jdbc.username=root
-hibernate.connection.jdbc.password=root
-
-hibernate.useJndi=false
-hibernate.connection.jndi.datasource=jdbc/esup-example
-
 ########################################################################
 # Authentication
 #
-
-cas.url=https://sso-cas.univ-rennes1.fr
-
-cas.service=https://portal.domain.edu:8443/esup-example
-
-
-########################################################################
-# LDAP
-#
-
-ldap.url=ldap://vldap.univ-rennes1.fr
-ldap.userName=
-ldap.password=
-ldap.base=dc=univ-rennes1,dc=fr
-ldap.dnSubPath=ou=people
-ldap.uidAttribute=uid
-ldap.displayNameAttribute=displayName
-ldap.emailAttribute=mail
-ldap.searchAttribute=cn
-ldap.attributes=cn,displayName,employeeType,department,homeDirectory
-ldap.searchDisplayedAttributes=cn,displayName,employeeType,department
+# CAS authentication
+auth.bean=casAuthenticationService
+# Offline authentication
+#auth.bean=OfflineFixedUserAuthenticationService
 
 ########################################################################
 # SMTP
 #
 
-smtp.host=smtp.univ-rennes1.fr
+smtp.host=monSMTP.monDomaine
 smtp.user=
 smtp.password=
-smtp.fromEmail=raymond.bourges@univ-rennes1.fr
-smtp.fromName=ESUP-Portail Example
+smtp.fromEmail=monEMail@monDomaine
+smtp.fromName=ESUP mobile Example
 smtp.interceptAll=true
-smtp.interceptEmail=raymond.bourges@univ-rennes1.fr
-smtp.interceptName=ESUP-Portail Example
-
-########################################################################
-# Upload
-#
-
-uploadedFiles.path=c:/example/files
-
-########################################################################
-# URL generation
-#
-
-urlGeneration.bean=servletUrlGenerator
-#urlGeneration.bean=uportalUrlGenerator
-
-urlGeneration.casLoginUrl=https://sso-cas.unniv-rennes1.fr/login?service=%s
-
-urlGeneration.servletLoginUrl=http://localhost:8080/esup-example/stylesheets/cas.faces
-urlGeneration.servletGuestUrl=http://localhost:8080/esup-example/stylesheets/welcome.faces
-
-urlGeneration.uportalFunctionnalName=esup-example
-urlGeneration.uportalLoginUrl=http://portal.domain.edu/Login
-urlGeneration.uportalGuestUrl=http://portal.domain.edu/Guest
-
-########################################################################
-# WEB SERVICES (server part)
-
-webService.authorizedClientNames=host1.domain.edu,host2.domain.edu
+smtp.interceptEmail=monEMail@monDomaine
+smtp.interceptName=ESUP mobile Example
 
 ########################################################################
 # WEB SERVICES (client part)
