--- a/src/main/resources/properties/defaults.properties
+++ b/src/main/resources/properties/defaults.properties
@@ -1,44 +1,9 @@
 titleI18nKey=WINDOW.TITLE
 title=
-
-mediaPath.portlet=/esup-blank/media
 mediaPath.servlet=../media
 
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-hibernate.connection.jdbc.url=jdbc:mysql://localhost/blank
-hibernate.connection.jdbc.username=admin
-hibernate.connection.jdbc.password=secret
-hibernate.jdbcTemplateBeanName=jdbcHibernateTemplate
-hibernate.jdbcSessionFactoryBeanName=jdbcSessionFactory
-hibernate.jdbcUpgradeSessionFactoryBeanName=jdbcUpgradeSessionFactory
-hibernate.useJndi=true
-hibernate.connection.jndi.datasource=jdbc/esup-blank
-hibernate.jndiTemplateBeanName=jndiHibernateTemplate
-hibernate.jndiSessionFactoryBeanName=jndiSessionFactory
-hibernate.jndiUpgradeSessionFactoryBeanName=jndiUpgradeSessionFactory
-
-auth.portal.uidAttribute=uid
-cas.url=https://cas.domain.edu
-
 exceptionHandling.logLevel=INFO
-exceptionHandling.email=bugs@domain.edu
-
-init.firstAdministratorId=
-
-ldap.url=ldap://ldap.domain.edu:389
-ldap.userName=
-ldap.password=
-ldap.base=dc=domain,dc=edu
-ldap.dnSubPath=ou=people
-ldap.uidAttribute=uid
-ldap.displayNameAttribute=displayName
-ldap.emailAttribute=mail
-ldap.searchAttribute=cn
-ldap.testFilter=cn=*smith*
-ldap.connectTimeout=5000
-ldap.attributes=cn,displayName,employeeType,department,homeDirectory
-ldap.searchDisplayedAttributes=cn,displayName,employeeType,department
+exceptionHandling.email=monEMail@monDomaine
 
 portal.webServiceUrl=http://portal.domain.edu/services/UportalService
 portal.testUser=smith
