--- a/example-dao/pom.xml
+++ b/example-dao/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>esup-example</artifactId>
-    <groupId>org.esupportail</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>org.esupportail</groupId>
-  <artifactId>example-dao</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>example-dao</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>esup-example</artifactId>
+		<groupId>org.esupportail</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<groupId>org.esupportail</groupId>
+	<artifactId>example-dao</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>example-dao</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jpa</artifactId>
@@ -22,6 +23,18 @@
 			<groupId>org.esupportail</groupId>
 			<artifactId>example-domain-beans</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.unitils</groupId>
+			<artifactId>unitils-mock</artifactId>
+			<version>3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.0.4.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
