--- a/example-domain-services/pom.xml
+++ b/example-domain-services/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>esup-example</artifactId>
-    <groupId>org.esupportail</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>org.esupportail</groupId>
-  <artifactId>example-domain-services</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>example-domain-services</name>
-  <url>http://maven.apache.org</url>
-   <dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>esup-example</artifactId>
+		<groupId>org.esupportail</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<groupId>org.esupportail</groupId>
+	<artifactId>example-domain-services</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>example-domain-services</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>example-domain-beans</artifactId>
@@ -27,6 +28,18 @@
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-auth</artifactId>
 			<version>${esupcommons.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>2.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
