--- a/example-web-jsf-mixed/pom.xml
+++ b/example-web-jsf-mixed/pom.xml
@@ -24,7 +24,7 @@
 		</resources>
 	</build>
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-exception</artifactId>
 			<version>${esupcommons.version}</version>
@@ -34,11 +34,11 @@
 			<artifactId>esup-commons2-jsf</artifactId>
 			<version>${esupcommons.version}</version>
 		</dependency>
-		<dependency>
+		--><dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>example-web-jsf-shared</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<exclusions>
+			<!--<exclusions>
 				<exclusion>
 					<groupId>org.esupportail</groupId>
 					<artifactId>esup-commons2-jsf2-exception</artifactId>
@@ -48,7 +48,7 @@
 					<artifactId>esup-commons2-jsf2</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		--></dependency>
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-portlet</artifactId>
