--- a/example-web-jsf-servlet/pom.xml
+++ b/example-web-jsf-servlet/pom.xml
@@ -14,6 +14,14 @@
 	<packaging>war</packaging>
 	<name>example-web-jsf-servlet</name>
 	<url>http://maven.apache.org</url>
+	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Technology Maven Repository</name>
+			<url>http://repository.prime.com.tr</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<resources>
@@ -30,9 +38,9 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-web</artifactId>
-			<version>${esupcommons.version}</version>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>2.2</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -43,6 +51,6 @@
 		<log.level>INFO</log.level>
 		<log.output>stdout</log.output>
 		<log.file>/tmp/esup-blank.log</log.file>
-		<cache.path>/tmp/esup-blank</cache.path>
+		<cache.path>/tmp/esup-example/cache</cache.path>
 	</properties>
 </project>
