--- a/example-web-springmvc-portlet/pom.xml
+++ b/example-web-springmvc-portlet/pom.xml
@@ -24,11 +24,15 @@
 		</resources>
 	</build>
 	<dependencies>
-		
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-web</artifactId>
 			<version>${esupcommons.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>example-domain-services</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<properties>
