--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -7,9 +7,11 @@
 # Authentication
 #
 # CAS authentication
-auth.bean=casAuthenticationService
+# auth.bean=casAuthenticationService
 # Offline authentication
-#auth.bean=OfflineFixedUserAuthenticationService
+auth.bean=OfflineFixedUserAuthenticationService
+
+cas.url=monCAS.monDomaine
 
 ########################################################################
 # SMTP
