manage JNDI/JDBC switch

--- a/example-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -8,12 +8,19 @@
 # Database
 #
 
-hibernate.connection.driver_class=org.hsqldb.jdbcDriver
-hibernate.connection.jdbc.url=jdbc:hsqldb:file:exampleData
-hibernate.connection.jdbc.username=sa
-hibernate.connection.jdbc.password=
+jdbc.connection.driver_class=org.hsqldb.jdbcDriver
+jdbc.connection.url=jdbc:hsqldb:file:exampleData
+jdbc.connection.username=sa
+jdbc.connection.password=
 
-hibernate.connection.jndi.datasource=jdbc/esup-example
+jndi.datasource=jdbc/exampleDB
+
+# JNDI/JDBC
+# for JDBC datasource.bean=JDBCDataSource
+# for JNDI datasource.bean=JNDIDataSource
+datasource.bean=JDBCDataSource
+
+jpa.database.type=HSQL
 
 ########################################################################
 # Authentication
