--- a/example-web-jsf-servlet/src/main/resources/properties/defaults.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/defaults.properties
@@ -4,12 +4,17 @@ title=
 mediaPath.portlet=/esup-blank/media
 mediaPath.servlet=/media
 
-hibernate.connection.driver_class=org.hsqldb.jdbcDriver
-hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-hibernate.connection.jdbc.url=jdbc:hsqldb:file:exampleData
-hibernate.connection.jdbc.username=admin
-hibernate.connection.jdbc.password=secret
-hibernate.connection.jndi.datasource=jdbc/esup-blank
+jdbc.connection.driver_class=org.hsqldb.jdbcDriver
+jdbc.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+jdbc.connection.url=jdbc:hsqldb:file:exampleData
+jdbc.connection.username=admin
+jdbc.connection.password=secret
+
+jndi.datasource=jdbc/esup-blank
+
+datasource.bean=JDBCDatasource
+
+jpa.database.type=HSQL
 
 cas.url=https://cas.domain.edu
 
