--- a/example-web-jsf-servlet/pom.xml
+++ b/example-web-jsf-servlet/pom.xml
@@ -30,6 +30,17 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.26</version>
+				<configuration>
+					<contextPath>/</contextPath>
+					<jettyEnvXml>${basedir}/src/main/config/jetty-env.xml</jettyEnvXml>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
