--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>esup-blank</name>
-	<description>An Blank Application with JSF 1.2 and Trinidad librairy</description>
+	<description>An Blank Application to start your project</description>
 	<repositories>
 		<repository>
 			<id>esup-snapshots</id>
@@ -49,7 +49,7 @@
 		<module>blank-web-jsf-mobile</module>
 	</modules>
 	<build>
-		<defaultGoal>javadoc:javadoc</defaultGoal>
+		<defaultGoal>install</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -63,19 +63,27 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.8</version>
 				<configuration>
 					<useProjectReferences>true</useProjectReferences>
-					<additionalConfig>
+					<!--<additionalConfig>
 						<file>
 							<name>.checkstyle</name>
 							<url>http://subversion.cru.fr/esup-commons/utils/checkstyle/checkstyle.xml</url>
 						</file>
 					</additionalConfig>
-					<additionalProjectFacets>
-						<jst.jsf>1.2</jst.jsf>
-					</additionalProjectFacets>
+			--><additionalProjectFacets>
+				<jst.jstl>2.0</jst.jstl>
+			</additionalProjectFacets>
 					<additionalProjectnatures>
 						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
 					</additionalProjectnatures>
@@ -103,8 +111,6 @@
 		</plugins>
 	</build>
 	<properties>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
 		<esupcommons.version>0.2.3-SNAPSHOT</esupcommons.version>
 	</properties>
 </project>
