--- a/blank-dao/pom.xml
+++ b/blank-dao/pom.xml
@@ -19,8 +19,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.esupportail</groupId>
-			<artifactId>example-domain-beans</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<artifactId>blank-domain-beans</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
