--- a/blank-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/blank-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- /webapp/WEB-INF/web.xml The main configuration file of the application 
 	for servlet installations. -->
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://java.sun.com/xml/ns/j2ee" 
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd" version="2.5">
-  <display-name>esup-blank-test</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd" version="2.5">
+  <javaee:display-name>esup-blank-test</javaee:display-name>
   <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:/log4j.properties
-		</param-value>
+    <javaee:param-name>log4jConfigLocation</javaee:param-name>
+    <javaee:param-value>classpath:/log4j.properties
+		</javaee:param-value>
   </context-param>
   <context-param>
-    <description> The location of the main configuration file of the
-			Spring framework. </description>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:/properties/applicationContext.xml
-		</param-value>
+    <javaee:description> The location of the main configuration file of the
+			Spring framework. </javaee:description>
+    <javaee:param-name>contextConfigLocation</javaee:param-name>
+    <javaee:param-value>classpath:/properties/applicationContext.xml
+		</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.CONFIG_FILES</param-name>
-    <param-value>
+    <javaee:param-name>javax.faces.CONFIG_FILES</javaee:param-name>
+    <javaee:param-value>
 			/WEB-INF/navigation-rules.xml
-		</param-value>
+		</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.PROJECT_STAGE</param-name>
-    <param-value>Development</param-value>
+    <javaee:param-name>javax.faces.PROJECT_STAGE</javaee:param-name>
+    <javaee:param-value>Development</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>com.sun.faces.allowTextChildren</param-name>
-    <param-value>true</param-value>
+    <javaee:param-name>com.sun.faces.allowTextChildren</javaee:param-name>
+    <javaee:param-value>true</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-    <param-value>.xhtml</param-value>
+    <javaee:param-name>javax.faces.DEFAULT_SUFFIX</javaee:param-name>
+    <javaee:param-value>.xhtml</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
-    <param-value>true</param-value>
+    <javaee:param-name>javax.faces.FACELETS_SKIP_COMMENTS</javaee:param-name>
+    <javaee:param-value>true</javaee:param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-    <param-value>/WEB-INF/esup-commons.taglib.xml 
-		</param-value>
+    <javaee:param-name>javax.faces.FACELETS_LIBRARIES</javaee:param-name>
+    <javaee:param-value>/WEB-INF/esup-commons.taglib.xml 
+		</javaee:param-value>
   </context-param>
   <servlet>
     <servlet-name>Resource Servlet</servlet-name>
@@ -53,10 +51,10 @@
     <url-pattern>/primefaces_resource/*</url-pattern>
   </servlet-mapping>
   <servlet>
-    <description> The main servlet of the application. This class inherits
+    <javaee:description> The main servlet of the application. This class inherits
 			from the MyFaces implementation and handles exceptions thrown for
-			specific exception handling. </description>
-    <display-name>Faces Servlet</display-name>
+			specific exception handling. </javaee:description>
+    <javaee:display-name>Faces Servlet</javaee:display-name>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
@@ -64,30 +62,31 @@
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.faces</url-pattern>
+    <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
   <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    <javaee:listener-class>org.springframework.web.util.Log4jConfigListener</javaee:listener-class>
   </listener>
   <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <javaee:listener-class>org.springframework.web.context.ContextLoaderListener</javaee:listener-class>
   </listener>
   <listener>
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    <javaee:listener-class>org.springframework.web.context.request.RequestContextListener</javaee:listener-class>
   </listener>
   <filter>
     <filter-name>CAS Authentication Filter</filter-name>
     <filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
     <init-param>
-      <param-name>casServerLoginUrl</param-name>
-      <param-value>${cas.url}/login</param-value>
+      <javaee:param-name>casServerLoginUrl</javaee:param-name>
+      <javaee:param-value>${cas.url}/login</javaee:param-value>
     </init-param>
     <init-param>
-      <param-name>serverName</param-name>
-      <param-value>http://localhost:8080</param-value>
+      <javaee:param-name>serverName</javaee:param-name>
+      <javaee:param-value>http://localhost:8080</javaee:param-value>
     </init-param>
   </filter>
   <filter-mapping>
@@ -98,12 +97,12 @@
     <filter-name>CAS Validation Filter</filter-name>
     <filter-class>org.jasig.cas.client.validation.Cas10TicketValidationFilter</filter-class>
     <init-param>
-      <param-name>casServerUrlPrefix</param-name>
-      <param-value>${cas.url}</param-value>
+      <javaee:param-name>casServerUrlPrefix</javaee:param-name>
+      <javaee:param-value>${cas.url}</javaee:param-value>
     </init-param>
     <init-param>
-      <param-name>serverName</param-name>
-      <param-value>http://localhost:8080</param-value>
+      <javaee:param-name>serverName</javaee:param-name>
+      <javaee:param-value>http://localhost:8080</javaee:param-value>
     </init-param>
   </filter>
   <filter-mapping>
