--- a/blank-web-jsf-mixed/src/main/webapp/WEB-INF/web.xml
+++ b/blank-web-jsf-mixed/src/main/webapp/WEB-INF/web.xml
@@ -139,7 +139,7 @@
 		<session-timeout>30</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>/stylesheets/home.xhtml</welcome-file>
+		<welcome-file>stylesheets/home.xhtml</welcome-file>
 	</welcome-file-list> 
 	<error-page>
 		<error-code>500</error-code>
