resolve use exceptionHandler in jsf-mixed

--- a/esup-blank-web-jsf-portlet/pom.xml
+++ b/esup-blank-web-jsf-portlet/pom.xml
@@ -42,6 +42,6 @@
 		<log.level>INFO</log.level>
 		<log.output>stdout</log.output>
 		<log.file>/tmp/esup-blank.log</log.file>
-		<cache.path>/tmp/esup-example/cache</cache.path>
+		<cache.path>/tmp/esup-blank/cache</cache.path>
 	</properties>
 </project>
