CL 25/02/2011 : test de mise en place de la connexion webservice entre servlet (service exposé) et portlet. A valider

--- a/example-web-jsf-mixed/pom.xml
+++ b/example-web-jsf-mixed/pom.xml
@@ -59,7 +59,7 @@
 		<deploy.type>portlet</deploy.type>
 		<log.level>INFO</log.level>
 		<log.output>stdout</log.output>
-		<log.file>/tmp/esup-blank.log</log.file>
-		<cache.path>/tmp/esup-blank</cache.path>
+		<log.file>/tmp/blank.log</log.file>
+		<cache.path>/tmp/blank</cache.path>
 	</properties>
 </project>
