--- a/example-web-jsf-servlet/pom.xml
+++ b/example-web-jsf-servlet/pom.xml
@@ -206,7 +206,7 @@
 		<tomcat.port.string>:8080</tomcat.port.string>
 		<log.level>INFO</log.level>
 		<log.output>stdout</log.output>
-		<log.file>/tmp/esup-blank.log</log.file>
+		<log.file>/tmp/blank.log</log.file>
 		<cache.path>/tmp/esup-example/cache</cache.path>
 		<your.standalone-compiler.version>4.3.2</your.standalone-compiler.version>
 		<zip.location>${basedir}/src/main/util/utils/7zip/7za.exe</zip.location>
