--- a/example-web-springmvc-portlet/pom.xml
+++ b/example-web-springmvc-portlet/pom.xml
@@ -42,7 +42,7 @@
 		<tomcat.port.string>:8080</tomcat.port.string>
 		<log.level>INFO</log.level>
 		<log.output>stdout</log.output>
-		<log.file>/tmp/esup-blank.log</log.file>
-		<cache.path>/tmp/esup-blank</cache.path>
+		<log.file>/tmp/blank.log</log.file>
+		<cache.path>/tmp/blank</cache.path>
 	</properties>
 </project>
