--- a/example-domain-services/pom.xml
+++ b/example-domain-services/pom.xml
@@ -30,6 +30,12 @@
 			<version>${esupcommons.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>esup-commons2-ws-cxf</artifactId>
+			<version>${esupcommons.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<version>2.0</version>
