--- a/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -120,6 +120,20 @@
 		<filter-name>CAS Validation Filter</filter-name>
 		<url-pattern>/stylesheets/cas.xhtml</url-pattern>
 	</filter-mapping>
+	
+	<!-- CXF -->
+	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class> org.apache.cxf.transport.servlet.CXFServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/cxf/*</url-pattern>
+	</servlet-mapping>
+	
+	
 	<welcome-file-list>
 		<welcome-file>stylesheets/welcome.xhtml</welcome-file>
 	</welcome-file-list>
