--- a/esup-blank-web-jsf-servlet/pom.xml
+++ b/esup-blank-web-jsf-servlet/pom.xml
@@ -12,6 +12,14 @@
 	<version>0.2.3-SNAPSHOT</version>
 	<name>esup-blank-web-jsf-servlet</name>
 	<description>couche d'acces aux donnees</description>
+	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Technology Maven Repository</name>
+			<url>http://repository.prime.com.tr</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<resources>
