added: <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,6 @@
 	</build>
 	<properties>
 		<esupcommons.version>0.2.3-SNAPSHOT</esupcommons.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
