--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.esupportail</groupId>
 	<artifactId>esup-commons2-parent</artifactId>
@@ -24,8 +25,8 @@
 		<module>esup-commons-web</module>
 		<module>esup-commons-aop</module>
 		<module>esup-commons-springmvc-portlet</module>
-    	<module>esup-commons-annotations</module>
-  </modules>
+		<module>esup-commons-annotations</module>
+	</modules>
 	<repositories>
 		<repository>
 			<id>esup-snapshots</id>
@@ -120,11 +121,11 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-			<groupId>org.springframework</groupId>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
 				<version>${org.springframework.version}</version>
 				<scope>test</scope>
-		</dependency>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
@@ -158,5 +159,6 @@
 		<org.springframework.version>3.0.4.RELEASE</org.springframework.version>
 		<javax.portlet.version>1.0</javax.portlet.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
