Rendus Mobile. Passage portlet -> servlet. Les exceptions en mode portlet, ce n'est pas réglé (pas d'interception).

--- a/esup-blank-web-jsf-mixed/src/main/config/portlet/WEB-INF/web.xml
+++ b/esup-blank-web-jsf-mixed/src/main/config/portlet/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	
 	<context-param>
 		<param-name>org.apache.myfaces.ERROR_HANDLER</param-name>
-		<param-value>org.esupportail.commons.exceptions.ExceptionHandler</param-value>
+		<param-value>org.esupportail.blank.jsf.mixed.exceptions.ExceptionHandler</param-value>
 	</context-param>
 
 	<!-- Trinidad -->
