--- a/esup-commons-jsf-parent/esup-commons-jsf-portlet/pom.xml
+++ b/esup-commons-jsf-parent/esup-commons-jsf-portlet/pom.xml
@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-jsf-parent</artifactId>
-		<version>0.2.3</version>
+		<version>0.2.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>esup-commons2-jsf-portlet</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.3</version>
+	<version>0.2.3-SNAPSHOT</version>
 	<name>esup-commons-jsf-portlet</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
