--- a/esup-commons-jsf-parent/pom.xml
+++ b/esup-commons-jsf-parent/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-parent</artifactId>
-		<version>0.2.3</version>
+		<version>0.2.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>esup-commons2-jsf-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.2.3</version>
+	<version>0.2.4-SNAPSHOT</version>
 	<name>esup-commons-jsf-parent</name>
 	<url>http://maven.apache.org</url>
 	<modules>
