--- a/esup-commons-springmvc-portlet/pom.xml
+++ b/esup-commons-springmvc-portlet/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<artifactId>esup-commons2-parent</artifactId>
 		<groupId>org.esupportail</groupId>
-		<version>0.2.3</version>
+		<version>0.2.4-SNAPSHOT</version>
 	</parent>
 	<groupId>org.esupportail</groupId>
 	<artifactId>esup-commons2-springmvc-portlet</artifactId>
 	<packaging>pom</packaging>
-	<version>0.2.3</version>
+	<version>0.2.4-SNAPSHOT</version>
 	<name>esup-commons-springmvc-portlet</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
