Résolution des problèmes de déploiement.

--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/defaults.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/defaults.properties
@@ -40,6 +40,13 @@ log.file.maxBackupIndex=3
 portlet.name=EsupBlankPortlet
 
 ########################################################################
+# SERVER
+#
+
+tomcat.host=localhost
+tomcat.port.string=:8080
+
+########################################################################
 # SMTP
 #
 
