--- a/esup-blank-web-jsf-mixed/pom.xml
+++ b/esup-blank-web-jsf-mixed/pom.xml
@@ -18,10 +18,6 @@
 	<profiles>
 		<profile>
 			<id>servletDevelopment</id>
-			<properties>
-				<tomcat.host>localhost</tomcat.host>
-				<tomcat.port.string>:8080</tomcat.port.string>
-			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 				<property>
@@ -143,10 +139,6 @@
 		</profile>
 		<profile>
 			<id>servletProduction</id>
-			<properties>
-				<tomcat.host>production-tomcat-host</tomcat.host>
-				<tomcat.port.string>:8080</tomcat.port.string>
-			</properties>
 			<activation>
 				<property>
 					<name>servletProduction</name>
@@ -154,9 +146,6 @@
 				</property>
 			</activation>
 			<build>
-				<filters>
-					<filter>src/main/resources/properties/defaults.properties</filter>
-				</filters>
 				<resources>
 					<resource>
 						<directory>src/main/java</directory>
@@ -166,7 +155,6 @@
 					</resource>
 					<resource>
 						<directory>src/main/resources</directory>
-						<filtering>true</filtering>
 					</resource>
 				</resources>
 				<defaultGoal>package</defaultGoal>
@@ -201,9 +189,6 @@
 				</property>
 			</activation>
 			<build>
-				<filters>
-					<filter>src/main/resources/properties/defaults.properties</filter>
-				</filters>
 				<resources>
 					<resource>
 						<directory>src/main/java</directory>
@@ -213,7 +198,6 @@
 					</resource>
 					<resource>
 						<directory>src/main/resources</directory>
-						<filtering>true</filtering>
 					</resource>
 				</resources>
 				<defaultGoal>package</defaultGoal>
@@ -238,6 +222,28 @@
 						</configuration>
 					</plugin>
 				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>webConfigure</id>
+			<activation>
+				<property>
+					<name>webConfigure</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<filters>
+					<filter>./../../../../WEB-INF/classes/properties/defaults.properties</filter>
+					<filter>./../../../../WEB-INF/classes/properties/config.properties</filter>
+				</filters>
+				<resources>
+					<resource>
+						<directory>./../../../../WEB-INF</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+				<defaultGoal>compile</defaultGoal>
 			</build>
 		</profile>
 	</profiles>
