--- a/example-web-jsf-portlet/src/main/resources/properties/defaults.properties
+++ b/example-web-jsf-portlet/src/main/resources/properties/defaults.properties
@@ -1,6 +1,8 @@
 titleI18nKey=WINDOW.TITLE
 title=
 
+auth.portal.uidAttribute=uid
+
 mediaPath.portlet=/esup-blank/media
 mediaPath.servlet=/media
 
