fixed: paginator refresh when entry deleting added: message during entry deleting

--- a/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -132,6 +132,11 @@
 		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/cxf/*</url-pattern>
 	</servlet-mapping>
+	<filter-mapping>
+		<filter-name>Hibernate Filter</filter-name>
+		<servlet-name>CXFServlet</servlet-name>
+	</filter-mapping>
+	
 	
 	
 	<welcome-file-list>
