Ajout esup-blank-web-springmvc-servlet

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<module>esup-blank-web-jsf-servlet</module>
 		<module>esup-blank-web-jsf-mobile</module>
 		<module>esup-blank-web-jsf-portlet</module>
+		<module>esup-blank-web-springmvc-servlet</module>
 	</modules>
 	<build>
 		<defaultGoal>install</defaultGoal>
